--- a/web-party-equipment/web-party-equipment-war/web/resources/css/cssLayout.css
+++ b/web-party-equipment/web-party-equipment-war/web/resources/css/cssLayout.css
@@ -4,11 +4,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #036fab;
     color: white;
     padding: 5px;
     text-align: center;
-    border-bottom: solid #666666 2px;
 }
 
 #bottom {
@@ -24,21 +22,22 @@
     margin-left: 10px;
 }
 
+.fa-1-5x{
+    font-size: 1.42em !important;
+}
+
 #left {
     position: absolute;
     left: 0;
+    font-size: 12px;
     top: 10%;
-    font-size:16px;
-    background-color: #ece3a5;
     padding: 5px;
-    width: 150px;
 }
 
 #right {
     position: absolute;
     right: 0;
     top: 10%;
-    background-color: #ece3a5;
     padding: 5px;
     width: 150px;
 }
