--- a/web-party-equipment/web-party-equipment-war/web/resources/css/cssLayout.css
+++ b/web-party-equipment/web-party-equipment-war/web/resources/css/cssLayout.css
@@ -1,13 +1,4 @@
 
-#top {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    color: white;
-    padding: 5px;
-    text-align: center;
-}
 
 #bottom {
     position: fixed;
@@ -28,10 +19,14 @@
 
 #left {
     position: absolute;
-    left: 0;
+    left: 1%;
     font-size: 12px;
-    top: 10%;
+    top: 15%;
     padding: 5px;
+}
+
+.navbar-li {
+    padding-left: 5px;
 }
 
 #right {
@@ -151,4 +146,8 @@
 
 .white-font-color{
     color: #FFFFFF !important;
+}
+
+nav{
+    border-radius: 0 !important;
 }
